# axione

./: .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
axione/: apartment.parquet  concurrency.py  config.py  dependencies.py  logger.py  main.py  schemas.py  scraper.py
tests/: conftest.py  test_apartments.parquet  test_concurrency.py  test_main.py  test_scraper.py
tests/templates/: well_being.jinja2
